# displaitor

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/plans/: performance-optimization-plan-26cc41-c79430ce.plan.md
aitos/: Cargo.toml  build.rs  memory.x
aitos/.cargo/: config.toml
aitos/src/: main.rs  monitor.rs
assets/audio/: music_nyan_cat.qoa  music_ppap.qoa  music_tetris.qoa  ping.qoa  pong.qoa
displaitor/: Cargo.toml
displaitor/assets/: marker.txt
displaitor/src/: app_enum.rs  controls.rs  key_release.rs  lib.rs  main.rs  string_buffer.rs  trait_app.rs
displaitor/src/apps/: app_animation.rs  app_dummy.rs  app_image.rs  app_menu.rs  app_names.rs  app_scrolling_text.rs  app_splashscreen.rs
displaitor/src/games/: app_gameboy.rs  app_pong.rs  app_snake.rs  app_space_invader.rs
qoa_decoder/: Cargo.toml
qoa_decoder/src/: lib.rs  lms.rs
simulaitor/: Cargo.toml
simulaitor/src/: main.rs
