[package]
edition = "2021"
name = "aitos"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7" }

defmt = "0.3"
defmt-rtt = "0.4"
# panic-probe = { version = "1.0.0-rc.1"}
# panic-probe = { version = "1.0.0-rc.1", features = ["print-defmt"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.8"
rp2040-hal = { version = "0.9.2", features = ["rt", "critical-section-impl", "rom-func-cache", "defmt", "chrono"] } # , "rom-v2-intrinsics"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

tinyqoi = "0.2.0"
embedded-error-chain.workspace = true
embedded-graphics = {workspace = true}
embedded-alloc = "0.6.0"
heapless = "0.8.0"
# linked_list_allocator = "0.10.5"
# hub75_pio = { git = "https://github.com/kjagiello/hub75-pio-rs.git"}
# https://github.com/kjagiello/hub75-pio-rs/tree/main
hub75-pio = { git = "https://github.com/Niedzwiedzw/hub75-rs.git", rev = "262bca716990f0c7eb54b6d6f40578498a78a505" }
displaitor = {path = "../displaitor"}
qoa_decoder = {path = "../qoa_decoder"}

# critical-section = "1.2.0"
# mutex-trait = "0.2.0"

[features]

default = []
audio = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true
panic="abort"

[profile.dev.package."*"]
opt-level = 3

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic="abort"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 8
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
