[package]
name = "displaitor"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-error-chain = {workspace = true}
embedded-graphics = {workspace = true}
# embedded-graphics-simulator = "0.7"
tinyqoi = "0.2.0"

# anyhow = "^1.0"
# thiserror = "^2.0.11"
# spin = "0.9.8"
# spin = { version = "0.9.8", default-features = false }
heapless = "0.8.0"
const-str = "0.6.1"
# critical-section = "1.2"
# mutex-trait = { version = "0.2", features = ["critical-section"] }
# portable-atomic = { version = "1.10", features = ["critical-section"] }
# mutex-trait = "0.2.0"
# critical-section = "1.2.0"
